# haiguitangmcp

./: .gitignore  README.md  pyproject.toml
haiguitang_mcp/: __main__.py  server.py
haiguitang_mcp/puzzles/: 100元钱.md  保龄球.md  免费的大餐.md  关灯之后.md  对赌.md  延迟死亡.md  忠诚的狗.md  怀孕.md  手滑.md  挑衅.md  捉迷藏.md  捉迷藏2.md  接连死去的哥哥.md  日访三十国.md  最棒的一天.md  杀人早餐.md  杀妻后自杀.md  死亡直播.md  水池中的死者.md  治病.md  爱犬.md  生意.md  电梯里的人.md  看病.md  看起来没那么严重.md  祭日.md  私人医生.md  脚步声.md  自相残杀.md  街上的工作.md  裤子破了.md  要好的朋友.md  要水拿枪.md  车头灯关闭.md  长路终有归途.md
